--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,17 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  display: flex;
+}
+.field {
+  margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+}
+.value {
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
+}  
